     'simd-width' fields.

  ** '-device-info'

     Added new MI command '-device-info' which is equivalent to CLI command
     'info devices'.

  ** Stop events include execution-mask, simd-width and hit-lanes-mask fields if
     available.

  ** '-thread-simd-width'

     Added new MI command '-thread-simd-width' which returns the SIMD width of a
     stopped thread.

* New remote packets

qXfer:libraries:read's response

  The qXfer:libraries:read query supports reporting in-memory libraries.  GDB
  indicates support by supplying qXfer:libraries:read:in-memory-library+ in the
  qSupported packet.

vAck:library
vAck:in-memory-library

  Acknowledge libraries to gdbserver when requested.  Libraries are acknowledged
  after the initial processing by GDB such as loading symbols and placing
  breakpoints.

U stop reply

  Indicates that threads are currently unavailable.  We tried stopping them but
  they did not respond.  The remote stub reports support for this stop reply to
  GDB's qSupported query.

* Changed remote packets

qXfer:features:read:target.xml

  The XML that is sent as a response can now include a "device" element
  that can be used for passing information when the remote inferior
  represents a device, e.g.  a GPU.

*** Changes in GDB 15

* The MPX commands "show/set mpx bound" have been deprecated, as Intel
  listed MPX as removed in 2019.

* Building GDB and GDBserver now requires a C++17 compiler.
  For example, GCC 9 or later.

* GDB index now contains information about the main function.  This speeds up
  startup when it is being used for some large binaries.

* On hosts where threading is available, DWARF reading is now done in
  the background, resulting in faster startup.  This can be controlled
  using "maint set dwarf synchronous".

* Changed commands

disassemble
  Attempting to use both the 'r' and 'b' flags with the disassemble
  command will now give an error.  Previously the 'b' flag would
  always override the 'r' flag.

gcore